fix: :ambulance: Fixed bug on small displays /welcome page

--- a/app/static/styles/welcome.css
+++ b/app/static/styles/welcome.css
@@ -44,12 +44,12 @@ body {
 }
 
 #welcome-span {
-  font-size : clamp(1.6rem, 2.4rem, 4rem);
+  font-size : 3rem;
 }
 
 #name-span,
 #subtitle-span {
-  font-size : clamp(3rem, 4.6rem, 5.2rem);
+  font-size : 4.2rem;
   color: #fdd81f;
 }
 
@@ -291,8 +291,14 @@ h1, h2, h3, h4, p {
     overflow: scroll;
   }
 
-  .welcome-text {
-    position: unset;
+  #welcome-span {
+    font-size : 2rem;
+  }
+  
+  #name-span,
+  #subtitle-span {
+    font-size : 3.1rem;
+    color: #fdd81f;
   }
   
   .glowing-orbs {
